2015-08-26  Jiong Wang  <jiong.wang@arm.com>

	* lib/target-supports.exp (check_effective_target_aarch64_tlsle32):
	New test directive.
	* gcc.target/aarch64/tlsle_1.x: New test source.
	* gcc.target/aarch64/tlsle12_1.c: New testcase.
	* gcc.target/aarch64/tlsle24_1.c: Likewise.
	* gcc.target/aarch64/tlsle32_1.c: Likewise.

2015-08-26  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>

	PR fortran/29600
	* gfortran.dg/shape_8.f90: New test.

2015-08-25  Marek Polacek  <polacek@redhat.com>

	PR middle-end/67330
	* gcc.dg/weak/weak-18.c: New test.

2015-08-25  David Malcolm  <dmalcolm@redhat.com>

	* jit.dg/test-error-pr63969-missing-driver.c: Add call to
	gcc_jit_context_set_bool_use_external_driver.

2015-08-25  Nathan Sidwell  <nathan@acm.org>

	* gcc.c-torture/execute/builtins/20010124-1.x: New.

	* gcc.dg/20001117-1.c: Needs return_address.
	* gcc.dg/20020415-1.c: Needs alloca.
	* gcc.dg/graphite/id-pr44676.c: Needs profiling.
	* gcc.dg/graphite/pr60979.c: Needs nonlocal_goto
	* gcc.dg/pr63186.c: Needs label_values.
	* gcc.dg/torture/pr33848.c: Likwise.

	* lib/target-supports.exp (check_effective_target_fopenacc,
	check_effective_target_fopenmp): Disable for nvptx.
	* gcc.dg/graphite/run-id-pr47653.c: Disable for nvptx.
	* gcc.dg/stack-usage-1.c: Likewise.
	* gcc.dg/stack-usage-2.c: Likewise.
	* gcc.dg/unused-5.c: Likewise.
	* gcc.dg/unwind-1.c: Likewise.

2015-08-25  Christian Bruel  <christian.bruel@st.com>

	* gcc.dg/Wno-frame-address.c: Skip for ARM.
	* g++.dg/Wno-frame-address.C: Ditto.

2015-08-24  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/67211
	* g++.dg/pr67211.C: New test.

2015-08-24  Louis Krupp <louis.krupp@zoho.com>

	PR fortran/62536
	PR fortran/66175
	* gfortran.dg/block_end_error_1.f90: New test.
	* gfortran.dg/blocks_nested_incomplete_1.f90: New test.

2015-08-24  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/66821
	* gcc.target/i386/pr66821.c: New test.

2015-08-24  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/67329