@@ -1,5 +1,12 @@
 2015-08-26  Jiong Wang  <jiong.wang@arm.com>
 
+	* gcc.target/aarch64/tlsle_1.x: Rename to tls_1.x
+	* gcc.target/aarch64/aarch64/tlsle12_1.c: Update source file name.
+	* gcc.target/aarch64/aarch64/tlsle24_1.c: Likewise.
+	* gcc.target/aarch64/aarch64/tlsle32_1.c: Likewise.
+
+2015-08-26  Jiong Wang  <jiong.wang@arm.com>
+
 	* lib/target-supports.exp (check_effective_target_aarch64_tlsle32):
 	New test directive.
 	* gcc.target/aarch64/tlsle_1.x: New test source.
